--- a/styles/index.styl
+++ b/styles/index.styl
@@ -306,6 +306,7 @@ th, td
   bgColor $codeBlockActiveColorDefault var(--codeBlockActiveColor) true
   outlineColor $codeBlockActiveColorDefault var(--codeBlockActiveColor) true
   border none !important
+  border-radius 5px
 
 .theme-container
   &.sidebar-open
